Add type for , , .

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -475,6 +475,13 @@ tr.del td {
 }
 
 /* ------------------------------------------------------------------------------------------
+ * Tabs
+ * ------------------------------------------------------------------------------------------ */
+ul.nav-tabs {
+  margin: 0;
+}
+
+/* ------------------------------------------------------------------------------------------
  * Print
  * ------------------------------------------------------------------------------------------ */
 
