Extend apiParam type with optional size (e.g. fieldname{0,12}).

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -125,6 +125,10 @@ td {
   left: auto;
 }
 
+.type-size {
+	color: #999999;
+}
+
 /* ------------------------------------------------------------------------------------------
  * apidoc - intro
  * ------------------------------------------------------------------------------------------ */
