--- a/template/index.html
+++ b/template/index.html
@@ -125,7 +125,7 @@
 
     {{#if article.permission.name}}
       <p>
-        {{__ "Permission:"}} 
+        {{__ "Permission:"}}
         {{article.permission.name}}
 
         {{#if article.permission.description}}
@@ -146,7 +146,7 @@
           </li>
         {{/each}}
       </ul>
- 
+
       <div class="tab-content">
       {{#each article.examples}}
         <div class="tab-pane{{#if_eq @index compare=0}} active{{/if_eq}}" id="examples-{{../id}}-{{@index}}">
@@ -186,12 +186,12 @@
             {{#if ../../_hasType}}
               <td>
                 {{{type}}}
-                {{#if size}}<span class="type-size">&#123;{{{size}}}&#125;</span>{{/if}}
               </td>
             {{/if}}
           <td>
             {{{nl2br description}}}
             {{#if defaultValue}}<p class="default-value">{{__ "Default value:"}} <code>{{{defaultValue}}}</code></p>{{/if}}
+            {{#if size}}<p class="type-size">{{__ "Size range:"}} <code>{{{size}}}</code></p>{{/if}}
           </td>
           </tr>
       {{/each}}
@@ -207,7 +207,7 @@
           </li>
         {{/each}}
       </ul>
- 
+
       <div class="tab-content">
       {{#each params.examples}}
         <div class="tab-pane{{#if_eq @index compare=0}} active{{/if_eq}}" id="{{../section}}-examples-{{../id}}-{{@index}}">
@@ -233,7 +233,7 @@
               </div>
             </div>
           </div>
- 
+
       {{#each article.parameter.fields.Parameter}}
           <div class="control-group">
             <label class="control-label" for="sample-request-field-{{field}}">{{field}}</label>
@@ -262,7 +262,7 @@
 
         </fieldset>
       </form>
-    {{/if}}    
+    {{/if}}
 </script>
 
 <script id="template-compare-article" type="text/x-handlebars-template">
@@ -363,7 +363,7 @@
 <script id="template-article-compare-permission" type="text/x-handlebars-template">
   {{#if article.permission.name}}
     <p>
-      {{__ "Permission:"}} 
+      {{__ "Permission:"}}
       {{#if compare.permission.name}}
 
         {{{showDiff article.permission.name compare.permission.name}}}
@@ -393,7 +393,7 @@
   {{else}}
     {{#if article.permission}}
       <p>
-        {{__ "Permission:"}} 
+        {{__ "Permission:"}}
         {{#if compare.permission.name}}
           <ins>
             {{{article.permission}}}
@@ -414,7 +414,7 @@
     {{else}}
       {{#if compare.permission.name}}
         <p>
-          {{__ "Permission:"}} 
+          {{__ "Permission:"}}
 
           <del>
           <br>
@@ -432,7 +432,7 @@
             <del>
             {{{compare.permission}}}
             </del>
-          </p> 
+          </p>
         {{/if}}
       {{/if}}
     {{/if}}
