Broader input fields.

--- a/template/index.html
+++ b/template/index.html
@@ -228,7 +228,7 @@
             <div class="controls">
               <div class="input-prepend">>
                 <span class="add-on">{{__ "url"}}</span>
-                <input type="text" class="sample-request-url" value="{{article.sampleRequest.0.url}}" />
+                <input type="text" class="input-xxlarge sample-request-url" value="{{article.sampleRequest.0.url}}" />
               </div>
             </div>
           </div>
@@ -244,7 +244,7 @@
                 <label class="control-label" for="sample-request-header-field-{{field}}">{{field}}</label>
                 <div class="controls">
                   <div class="input-append">>
-                    <input type="text" placeholder="{{field}}" class="sample-request-header" data-sample-request-header-name="{{field}}" data-sample-request-header-group="sample-request-header-{{@../index}}">
+                    <input type="text" placeholder="{{field}}" class="input-xxlarge sample-request-header" data-sample-request-header-name="{{field}}" data-sample-request-header-group="sample-request-header-{{@../index}}">
                     <span class="add-on">{{type}}</span>
                   </div>
                 </div>
@@ -266,7 +266,7 @@
                 <label class="control-label" for="sample-request-param-field-{{field}}">{{field}}</label>
                 <div class="controls">
                   <div class="input-append">>
-                    <input type="text" placeholder="{{field}}" class="sample-request-param" data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}">
+                    <input type="text" placeholder="{{field}}" class="input-xxlarge sample-request-param" data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}">
                     <span class="add-on">{{type}}</span>
                   </div>
                 </div>
