--- a/template/index.html
+++ b/template/index.html
@@ -123,19 +123,17 @@
 
     <pre class="prettyprint language-html" data-type="{{toLowerCase article.type}}"><code>{{article.url}}</code></pre>
 
-    {{#if article.permission.name}}
+    {{#if article.permission}}
       <p>
         {{__ "Permission:"}}
-        {{article.permission.name}}
-
-        {{#if article.permission.description}}
-          &nbsp;<a href="#" data-toggle="popover" data-placement="right" data-html="true" data-content="{{nl2br article.permission.description}}" title="" data-original-title="{{article.permission.title}}"><span class="label label-info"><i class="icon icon-info-sign icon-white"></i></span></a>
-        {{/if}}
+        {{#each article.permission}}
+          {{name}}
+          {{#if title}}
+            &nbsp;<a href="#" data-toggle="popover" data-placement="right" data-html="true" data-content="{{nl2br description}}" title="" data-original-title="{{title}}"><span class="label label-info"><i class="icon icon-info-sign icon-white"></i></span></a>
+            {{#unless @last}}, {{/unless}}
+          {{/if}}
+        {{/each}}
       </p>
-    {{else}}
-      {{#if article.permission}}
-        <p>{{__ "Permission:"}} {{article.permission}}</p>
-      {{/if}}
     {{/if}}
 
     {{#if_gt article.examples.length compare=0}}
@@ -187,11 +185,17 @@
                 {{{type}}}
               </td>
             {{/if}}
-          <td>
+            <td>
             {{{nl2br description}}}
             {{#if defaultValue}}<p class="default-value">{{__ "Default value:"}} <code>{{{defaultValue}}}</code></p>{{/if}}
             {{#if size}}<p class="type-size">{{__ "Size range:"}} <code>{{{size}}}</code></p>{{/if}}
-          </td>
+            {{#if allowedValues}}<p class="type-size">{{__ "Allowed values:"}}
+              {{#each allowedValues}}
+                <code>{{{this}}}</code>{{#unless @last}}, {{/unless}}
+              {{/each}}
+              </p>
+            {{/if}}
+            </td>
           </tr>
       {{/each}}
         </tbody>
@@ -391,82 +395,57 @@
 </script>
 
 <script id="template-article-compare-permission" type="text/x-handlebars-template">
-  {{#if article.permission.name}}
-    <p>
-      {{__ "Permission:"}}
-      {{#if compare.permission.name}}
-
-        {{{showDiff article.permission.name compare.permission.name}}}
-
-        {{#if article.permission.description}}
-          &nbsp;<a href="#" data-toggle="popover" data-placement="right" data-html="true" data-content="{{{showDiff article.permission.description compare.permission.description "nl2br"}}}" title="" data-original-title="{{{showDiff article.permission.title compare.permission.title}}}"><span class="label label-info"><i class="icon icon-info-sign icon-white"></i></span></a>
+  {{#each_compare_list_field article.permission compare.permission field="name"}}
+    {{#if source}}
+      {{#if typeSame}}
+        {{source.name}}
+        {{#if source.title}}
+          &nbsp;<a href="#" data-toggle="popover" data-placement="right" data-html="true" data-content="{{nl2br source.description}}" title="" data-original-title="{{source.title}}"><span class="label label-info"><i class="icon icon-info-sign icon-white"></i></span></a>
+          {{#unless _last}}, {{/unless}}
         {{/if}}
-
-      {{else}}
-
-        <ins>
-          {{article.permission.name}}
-
-          {{#if article.permission.description}}
-            &nbsp;<a href="#" data-toggle="popover" data-placement="right" data-html="true" data-content="{{nl2br article.permission.description}}" title="" data-original-title="{{article.permission.title}}"><span class="label label-info"><i class="icon icon-info-sign icon-white"></i></span></a>
-          {{/if}}
-        </ins>
-
-        {{#if compare.permission}}
-        <del>
-          <br>{{{compare.permission}}}
-        </del>
-        {{/if}}
-
       {{/if}}
-    </p>
-  {{else}}
-    {{#if article.permission}}
-      <p>
-        {{__ "Permission:"}}
-        {{#if compare.permission.name}}
-          <ins>
-            {{{article.permission}}}
-          </ins>
 
-          <del>
-          <br>
-          {{compare.permission.name}}
-
-          {{#if compare.permission.description}}
-            &nbsp;<a href="#" data-toggle="popover" data-placement="right" data-html="true" data-content="{{nl2br compare.permission.description}}" title="" data-original-title="{{compare.permission.title}}"><span class="label label-info"><i class="icon icon-info-sign icon-white"></i></span></a>
-          {{/if}}
-          </del>
-        {{else}}
-          {{{showDiff article.permission compare.permission}}}
+      {{#if typeIns}}
+        <ins>{{source.name}}</ins>
+        {{#if source.title}}
+          &nbsp;<a href="#" data-toggle="popover" data-placement="right" data-html="true" data-content="{{nl2br source.description}}" title="" data-original-title="{{source.title}}"><span class="label label-info"><i class="icon icon-info-sign icon-white"></i></span></a>
+          {{#unless _last}}, {{/unless}}
         {{/if}}
-      </p>
+      {{/if}}
+
+      {{#if typeDel}}
+        <del>{{source.name}}</del>
+        {{#if source.title}}
+          &nbsp;<a href="#" data-toggle="popover" data-placement="right" data-html="true" data-content="{{nl2br source.description}}" title="" data-original-title="{{source.title}}"><span class="label label-info"><i class="icon icon-info-sign icon-white"></i></span></a>
+          {{#unless _last}}, {{/unless}}
+        {{/if}}
+      {{/if}}
     {{else}}
-      {{#if compare.permission.name}}
-        <p>
-          {{__ "Permission:"}}
+      {{#if typeSame}}
+        {{compare.name}}
+        {{#if compare.title}}
+          &nbsp;<a href="#" data-toggle="popover" data-placement="right" data-html="true" data-content="{{nl2br compare.description}}" title="" data-original-title="{{compare.title}}"><span class="label label-info"><i class="icon icon-info-sign icon-white"></i></span></a>
+          {{#unless _last}}, {{/unless}}
+        {{/if}}
+      {{/if}}
 
-          <del>
-          <br>
-          {{compare.permission.name}}
+      {{#if typeIns}}
+        <ins>{{compare.name}}</ins>
+        {{#if compare.title}}
+          &nbsp;<a href="#" data-toggle="popover" data-placement="right" data-html="true" data-content="{{nl2br compare.description}}" title="" data-original-title="{{compare.title}}"><span class="label label-info"><i class="icon icon-info-sign icon-white"></i></span></a>
+          {{#unless _last}}, {{/unless}}
+        {{/if}}
+      {{/if}}
 
-          {{#if compare.permission.description}}
-            &nbsp;<a href="#" data-toggle="popover" data-placement="right" data-html="true" data-content="{{nl2br compare.permission.description}}" title="" data-original-title="{{compare.permission.title}}"><span class="label label-info"><i class="icon icon-info-sign icon-white"></i></span></a>
-          {{/if}}
-          </del>
-        </p>
-      {{else}}
-        {{#if compare.permission}}
-          <p>
-            {{__ "Permission:"}}
-            <del>
-            {{{compare.permission}}}
-            </del>
-          </p>
+      {{#if typeDel}}
+        <del>{{compare.name}}</del>
+        {{#if compare.title}}
+          &nbsp;<a href="#" data-toggle="popover" data-placement="right" data-html="true" data-content="{{nl2br compare.description}}" title="" data-original-title="{{compare.title}}"><span class="label label-info"><i class="icon icon-info-sign icon-white"></i></span></a>
+          {{#unless _last}}, {{/unless}}
         {{/if}}
       {{/if}}
     {{/if}}
-  {{/if}}
+  {{/each_compare_list_field}}
 </script>
 
 <script id="template-article-compare-param-block" type="text/x-handlebars-template">
@@ -661,14 +640,14 @@
 
 <div id="loader">
   <div class="spinner">
-	  <div class="spinner-container container1">
-	    <div class="circle1"></div><div class="circle2"></div><div class="circle3"></div><div class="circle4"></div>
-	  </div>
-	  <div class="spinner-container container2">
-	    <div class="circle1"></div><div class="circle2"></div><div class="circle3"></div><div class="circle4"></div>
-	  </div>
-	  <div class="spinner-container container3">
-	    <div class="circle1"></div><div class="circle2"></div><div class="circle3"></div><div class="circle4"></div>
+    <div class="spinner-container container1">
+      <div class="circle1"></div><div class="circle2"></div><div class="circle3"></div><div class="circle4"></div>
+    </div>
+    <div class="spinner-container container2">
+      <div class="circle1"></div><div class="circle2"></div><div class="circle3"></div><div class="circle4"></div>
+    </div>
+    <div class="spinner-container container3">
+      <div class="circle1"></div><div class="circle2"></div><div class="circle3"></div><div class="circle4"></div>
     </div>
     <p>Loading...</p>
   </div>
