Added a option to not show the URL part in a block. Useful for having a descriptive block for whole system. URL part is not shown when the url is specified as '-'

--- a/template/index.html
+++ b/template/index.html
@@ -120,9 +120,9 @@
     {{#if article.description}}
       <p>{{{nl2br article.description}}}</p>
     {{/if}}
-
-    <pre class="prettyprint language-html" data-type="{{toLowerCase article.type}}"><code>{{article.url}}</code></pre>
-
+    {{#if article.url }}
+      <pre class="prettyprint language-html" data-type="{{toLowerCase article.type}}"><code>{{article.url}}</code></pre>
+    {{/if}}
     {{#if article.permission}}
       <p>
         {{__ "Permission:"}}
