--- a/template/index.html
+++ b/template/index.html
@@ -249,7 +249,7 @@
                 <div class="controls">
                   <div class="input-append">>
                     <input type="text" placeholder="{{field}}" class="input-xxlarge sample-request-header" data-sample-request-header-name="{{field}}" data-sample-request-header-group="sample-request-header-{{@../index}}">
-                    <span class="add-on">{{type}}</span>
+                    <span class="add-on">{{{type}}}</span>
                   </div>
                 </div>
               </div>
@@ -271,7 +271,7 @@
                 <div class="controls">
                   <div class="input-append">>
                     <input type="text" placeholder="{{field}}" class="input-xxlarge sample-request-param" data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}">
-                    <span class="add-on">{{type}}</span>
+                    <span class="add-on">{{{type}}}</span>
                   </div>
                 </div>
               </div>
