--- a/template/index.html
+++ b/template/index.html
@@ -30,6 +30,7 @@
       {{/if}}
     {{/if}}
   {{/each}}
+    <li><button class="btn all"> <i class="icon-th"></i> 显示全部</button></li>
   </ul>
 </nav>
 </script>
@@ -116,6 +117,18 @@
     </div>
     {{/if}}
     <div class="clearfix"></div>
+
+    <div class="tags">
+    {{#each article.tags}}
+      <button class="btn tag" data-filter="tags" data-tag="{{this}}"><i class="icon-tag"></i> {{this}}</button>
+    {{/each}}
+    </div>
+
+    <div class="authors">
+    {{#each article.author}}
+      <button class="btn author" data-filter="author" data-author="{{this}}"><i class="icon-user"></i> {{this}}</button>
+    {{/each}}
+    </div>
 
     {{#if article.description}}
       <p>{{{nl2br article.description}}}</p>
