--- a/template/index.html
+++ b/template/index.html
@@ -186,8 +186,8 @@
               </td>
             {{/if}}
             <td>
-        "template/index.html"    {{{nl2br description}}}
-            {{#if defaultV"template/index.html"alue}}<p class="default-value">{{__ "Default value:"}} <code>{{{defaultValue}}}</code></p>{{/if}}
+            {{{nl2br description}}}
+            {{#if defaultValue}}<p class="default-value">{{__ "Default value:"}} <code>{{{defaultValue}}}</code></p>{{/if}}
             {{#if size}}<p class="type-size">{{__ "Size range:"}} <code>{{{size}}}</code></p>{{/if}}
             {{#if allowedValues}}<p class="type-size">{{__ "Allowed values:"}}
               {{#each allowedValues}}
