unescape the field param otherwise it was rendered "&lt;p&gt;&gt;p&lt;String&lt;/p&gt;"

--- a/template/index.html
+++ b/template/index.html
@@ -271,7 +271,7 @@
                 <div class="controls">
                   <div class="input-append">>
                     <input type="text" placeholder="{{field}}" class="input-xxlarge sample-request-param" data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}">
-                    <span class="add-on">{{type}}</span>
+                    <span class="add-on">{{{type}}}</span>
                   </div>
                 </div>
               </div>
