cleanup cookies: sometimes REST API doesn't like browser cookies, they're stateless!

--- a/template/index.html
+++ b/template/index.html
@@ -9,6 +9,7 @@
   <link href="css/style.css" rel="stylesheet" media="screen, print">
   <link href="img/favicon.ico" rel="icon" type="image/x-icon">
   <script src="vendor/polyfill.js"></script>
+  <script src="vendor/js.cookie-2.0.4.min.js"></script>
 </head>
 <body>
 
