--- a/template/index.html
+++ b/template/index.html
@@ -171,7 +171,7 @@
       <table>
         <thead>
           <tr>
-            <th style="width: 30%">{{#if _col1}}{{__ _col1}}{{else}}{{__ "Field"}}{{/if}}</th>
+          <th style="width: 30%">{{#if ../../_col1}}{{__ ../../_col1}}{{else}}{{__ "Field"}}{{/if}}</th>
             {{#if ../../_hasType}}<th style="width: 10%">{{__ "Type"}}</th>{{/if}}
             <th style="width: {{#if _hasType}}60%{{else}}70%{{/if}}">{{__ "Description"}}</th>
           </tr>
@@ -456,7 +456,7 @@
         <table>
         <thead>
           <tr>
-            <th style="width: 30%">{{#if _col1}}{{__ _col1}}{{else}}{{__ "Field"}}{{/if}}</th>
+            <th style="width: 30%">{{#if ../../_col1}}{{__ ../../_col1}}{{else}}{{__ "Field"}}{{/if}}</th>
             {{#if ../../_hasType}}<th style="width: 10%">{{__ "Type"}}</th>{{/if}}
             <th style="width: {{#if _hasType}}60%{{else}}70%{{/if}}">{{__ "Description"}}</th>
           </tr>
@@ -470,7 +470,7 @@
         <table class="ins">
         <thead>
           <tr>
-            <th style="width: 30%">{{#if _col1}}{{__ _col1}}{{else}}{{__ "Field"}}{{/if}}</th>
+            <th style="width: 30%">{{#if ../../_col1}}{{__ ../../_col1}}{{else}}{{__ "Field"}}{{/if}}</th>
             {{#if ../../_hasType}}<th style="width: 10%">{{__ "Type"}}</th>{{/if}}
             <th style="width: {{#if _hasType}}60%{{else}}70%{{/if}}">{{__ "Description"}}</th>
           </tr>
@@ -484,7 +484,7 @@
         <table class="del">
         <thead>
           <tr>
-            <th style="width: 30%">{{#if _col1}}{{__ _col1}}{{else}}{{__ "Field"}}{{/if}}</th>
+            <th style="width: 30%">{{#if ../../_col1}}{{__ ../../_col1}}{{else}}{{__ "Field"}}{{/if}}</th>
             {{#if ../../_hasType}}<th style="width: 10%">{{__ "Type"}}</th>{{/if}}
             <th style="width: {{#if _hasType}}60%{{else}}70%{{/if}}">{{__ "Description"}}</th>
           </tr>
