Escape and wrap output from sample request response

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -235,6 +235,12 @@ pre code {
   white-space: pre;
 }
 
+pre code.sample-request-response-json {
+  white-space: pre-wrap;
+  max-height: 300px;
+  overflow: scroll;
+}
+
 /*
 pre.language-json {
   background: #f5f5f5;
