change max-height and overflow styles of response

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -237,8 +237,8 @@ pre code {
 
 pre code.sample-request-response-json {
   white-space: pre-wrap;
-  max-height: 300px;
-  overflow: scroll;
+  max-height: 500px;
+  overflow: auto;
 }
 
 /*
