Mark required fields

--- a/template/index.html
+++ b/template/index.html
@@ -230,7 +230,7 @@
         <fieldset>
           <div class="control-group">
             <div class="controls">
-              <div class="input-prepend">>
+              <div class="input-prepend">
                 <span class="add-on">{{__ "url"}}</span>
                 <input type="text" class="input-xxlarge sample-request-url" value="{{article.sampleRequest.0.url}}" />
               </div>
@@ -247,8 +247,8 @@
               <div class="control-group">
                 <label class="control-label" for="sample-request-header-field-{{field}}">{{field}}</label>
                 <div class="controls">
-                  <div class="input-append">>
-                    <input type="text" placeholder="{{field}}" class="input-xxlarge sample-request-header" data-sample-request-header-name="{{field}}" data-sample-request-header-group="sample-request-header-{{@../index}}">
+                  <div class="input-append">
+                    <input type="text" placeholder="{{field}}" class="input-xxlarge sample-request-header" data-sample-request-header-name="{{field}}" data-sample-request-header-group="sample-request-header-{{@../index}}" required="{{#if optional}}false{{else}}true{{/if}}">
                     <span class="add-on">{{{type}}}</span>
                   </div>
                 </div>
@@ -269,8 +269,8 @@
               <div class="control-group">
                 <label class="control-label" for="sample-request-param-field-{{field}}">{{field}}</label>
                 <div class="controls">
-                  <div class="input-append">>
-                    <input type="text" placeholder="{{field}}" class="input-xxlarge sample-request-param" data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}">
+                  <div class="input-append">
+                    <input type="text" placeholder="{{field}}" class="input-xxlarge sample-request-param" data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}" required="{{#if optional}}false{{else}}true{{/if}}">
                     <span class="add-on">{{{type}}}</span>
                   </div>
                 </div>
